hphp/hack/test/typecheck/records/record_decl_not_const.php
<?hh

function foo(): int { return 1; }

record A {
  int x = foo();
}
